@@ -33,14 +33,16 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox {
 
     private static final List<String> blackList = Arrays.asList("Files", "exec");
 
-        private static final WordTree WORD_TREE;
-//
+    private static final WordTree WORD_TREE;
+
+    //
 //
     static {
         // 初始化字典树
         WORD_TREE = new WordTree();
         WORD_TREE.addWords(blackList);
     }
+
     public static void main(String[] args) {
         JavaNativeCodeSandboxOld javaNativeCodeSandbox = new JavaNativeCodeSandboxOld();
         ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
@@ -148,7 +150,8 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox {
         return executeCodeResponse;
 
     }
-            /**
+
+    /**
      * 获取错误响应
      *
      * @param e
@@ -164,103 +167,7 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox {
         return executeCodeResponse;
     }
 
-
-
-////        2. 编译代码，得到 class 文件
-//        String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
-//        try {
-//            Process compileProcess = Runtime.getRuntime().exec(compileCmd);
-//            ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
-//            System.out.println(executeMessage);
-//        } catch (Exception e) {
-//            return getErrorResponse(e);
-//        }
-//
-//        // 3. 执行代码，得到输出结果
-//        List<ExecuteMessage> executeMessageList = new ArrayList<>();
-//        for (String inputArgs : inputList) {
-////            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
-//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
-//            try {
-//                Process runProcess = Runtime.getRuntime().exec(runCmd);
-//                // 超时控制
-//                new Thread(() -> {
-//                    try {
-//                        Thread.sleep(TIME_OUT);
-//                        System.out.println("超时了，中断");
-//                        runProcess.destroy();
-//                    } catch (InterruptedException e) {
-//                        throw new RuntimeException(e);
-//                    }
-//                }).start();
-//                ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
-////                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
-//                System.out.println(executeMessage);
-//                executeMessageList.add(executeMessage);
-//            } catch (Exception e) {
-//                return getErrorResponse(e);
-//            }
-//        }
-
-////        4. 收集整理输出结果
-//        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
-//        List<String> outputList = new ArrayList<>();
-//        // 取用时最大值，便于判断是否超时
-//        long maxTime = 0;
-//        for (ExecuteMessage executeMessage : executeMessageList) {
-//            String errorMessage = executeMessage.getErrorMessage();
-//            if (StrUtil.isNotBlank(errorMessage)) {
-//                executeCodeResponse.setMessage(errorMessage);
-//                // 用户提交的代码执行中存在错误
-//                executeCodeResponse.setStatus(3);
-//                break;
-//            }
-//            outputList.add(executeMessage.getMessage());
-//            Long time = executeMessage.getTime();
-//            if (time != null) {
-//                maxTime = Math.max(maxTime, time);
-//            }
-//        }
-//        // 正常运行完成
-//        if (outputList.size() == executeMessageList.size()) {
-//            executeCodeResponse.setStatus(1);
-//        }
-//        executeCodeResponse.setOutputList(outputList);
-//        JudgeInfo judgeInfo = new JudgeInfo();
-//        judgeInfo.setTime(maxTime);
-//        // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
-////        judgeInfo.setMemory();
-//
-//        executeCodeResponse.setJudgeInfo(judgeInfo);
-//
-////        5. 文件清理
-//        if (userCodeFile.getParentFile() != null) {
-//            boolean del = FileUtil.del(userCodeParentPath);
-//            System.out.println("删除" + (del ? "成功" : "失败"));
-//        }
-//        return executeCodeResponse;
-
-
-
-
-//    /**
-//     * 获取错误响应
-//     *
-//     * @param e
-//     * @return
-//     */
-//    private ExecuteCodeResponse getErrorResponse(Throwable e) {
-//        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
-//        executeCodeResponse.setOutputList(new ArrayList<>());
-//        executeCodeResponse.setMessage(e.getMessage());
-//        // 表示代码沙箱错误
-//        executeCodeResponse.setStatus(2);
-//        executeCodeResponse.setJudgeInfo(new JudgeInfo());
-//        return executeCodeResponse;
-//    }
 }
-
-
 
 
 
